--- a/views/signup.html
+++ b/views/signup.html
@@ -38,6 +38,8 @@
             </p>
         </div>
     </div>  
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/config.js"></script>
     <script src="/js/signup.js"></script>  
 </body>
 </html>
