--- a/views/login.html
+++ b/views/login.html
@@ -29,5 +29,8 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/config.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
