--- a/views/chat.html
+++ b/views/chat.html
@@ -27,7 +27,7 @@
         <div class="chat-section">
             <div class="chat-header" id="chatHeader">Chats</div>
             <div class="chat-box" id="chatBox"></div>
-            <div class="send">
+            <div class="message-input">
                 <form action="#" id="sendForm">
                     <input type="text" id="messageInput" placeholder="Type...">
                     <button id="btn" type="submit">Send</button>
