--- a/views/chat.html
+++ b/views/chat.html
@@ -35,8 +35,9 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/config.js"></script>
-    <script src="/js/chat.js"></script>
+    <script src="/js/websocketChat.js"></script>
 </body>
 </html>
